Refactoring and renaming

--- a/templates/logstash/elasticsearch.yml.erb
+++ b/templates/logstash/elasticsearch.yml.erb
@@ -1,6 +1,6 @@
 # File Managed by Puppet
 
-cluster.name: <%= scope.lookupvar('stack::logs::elasticsearch_cluster_name') %>
+cluster.name: <%= scope.lookupvar('stack::logstash::elasticsearch_cluster_name') %>
 
 # node.name: "Franz Kafka"
 # node.master: true
