--- a/templates/logstash.conf.erb
+++ b/templates/logstash.conf.erb
@@ -1,11 +1,11 @@
 # File Managed by Pyppet
 input {
   tcp {
-    port => "<%= scope.lookupvar('stack_logstash::syslog_server_port') %>"
+    port => "<%= scope.lookupvar('::stack_logstash::syslog_server_port') %>"
     type => "syslog"
   }
   udp {
-  port => "<%= scope.lookupvar('stack_logstash::syslog_server_port') %>"
+  port => "<%= scope.lookupvar('::stack_logstash::syslog_server_port') %>"
     type => "syslog"
   }
 }
@@ -19,10 +19,6 @@ filter {
   }
   syslog_pri {
       type => "syslog"
-  }
-  date {
-      type => "syslog"
-      syslog_timestamp => [ "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
   }
   mutate {
       type => "syslog"
@@ -39,7 +35,7 @@ filter {
 output {
   elasticsearch_http {
     type => "syslog"
-    host => "<%= scope.lookupvar('stack_logstash::real_elasticsearch_server') %>"
-    port => "<%= scope.lookupvar('stack_logstash::elasticsearch_server_port') %>"
+    host => <%= scope.lookupvar('::stack_logstash::real_elasticsearch_server').to_a %>
+    port => "<%= scope.lookupvar('::stack_logstash::elasticsearch_server_port') %>"
   }
 }
