--- a/templates/kibana/config.js.erb
+++ b/templates/kibana/config.js.erb
@@ -1,13 +1,12 @@
 /* File managed by Puppet */
 
-var config = new Settings(
-{
-  elasticsearch:    "<%= scope.lookupvar('stack_logstash::elasticsearch_protocol') %>://<%= scope.lookupvar('stack_logstash::real_elasticsearch_server') %>:<%= scope.lookupvar('stack_logstash::elasticsearch_server_port') %>",
-  kibana_index:     "kibana-int",
-  modules:          ['histogram','map','pie','table','filtering',
-                    'timepicker','text','fields','hits','dashcontrol',
-                    'column','derivequeries','trends','bettermap','query',
-                    'terms'],
-  }
-);
+define(['settings'],
+function (Settings) {
 
+  return new Settings({
+    elasticsearch:    "<%= @file_options_hash['elasticsearch'] %>",
+    default_route:    "<%= @file_options_hash['default_route'] %>",
+    kibana_index:     "<%= @file_options_hash['kibana_index'] %>",
+    panel_names:      <%= @file_options_hash['panel_names'] %>
+  });
+});
