--- a/templates/logstash/logstash.conf.erb
+++ b/templates/logstash/logstash.conf.erb
@@ -11,30 +11,27 @@ input {
 }
 
 filter {
-  grok {
-      type => "syslog"
+  if [type] == "syslog" { 
+    grok {
       pattern => [ "<%%{POSINT:syslog_pri}>%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{PROG:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}" ]
       add_field => [ "received_at", "%{@timestamp}" ]
       add_field => [ "received_from", "%{@source_host}" ]
-  }
-  syslog_pri {
-      type => "syslog"
-  }
-  mutate {
-      type => "syslog"
+    }
+    syslog_pri {
+    }
+    mutate {
       exclude_tags => "_grokparsefailure"
       replace => [ "@source_host", "%{syslog_hostname}" ]
       replace => [ "@message", "%{syslog_message}" ]
-  }
-  mutate {
-      type => "syslog"
+    }
+    mutate {
       remove => [ "syslog_hostname", "syslog_message", "syslog_timestamp" ]
+    }
   }
 }
 
 output {
   elasticsearch_http {
-    type => "syslog"
     host => <%= scope.lookupvar('::stack_logstash::real_elasticsearch_server').to_a %>
     port => "<%= scope.lookupvar('::stack_logstash::elasticsearch_server_port') %>"
   }
