--- a/templates/logstash/logstash.conf.erb
+++ b/templates/logstash/logstash.conf.erb
@@ -32,7 +32,7 @@ filter {
 
 output {
   elasticsearch_http {
-    host => <%= scope.lookupvar('::stack_logstash::elasticsearch_server').to_a %>
+    host => <%= scope.lookupvar('::stack_logstash::array_elasticsearch_server') %>
     port => "<%= scope.lookupvar('::stack_logstash::elasticsearch_server_port') %>"
   }
 }
